# lituk

./: .gitignore  CLAUDE.md  pyrightconfig.json
ai/: instructions.md
ai/cinematic/: ch3_1-early-britain-cinematic-memory-version.md  ch3_2-middle-ages-cinematic-memory.md
ai/summary/: ch1_values-and-principles.md  ch2_what-is-the-uk.md  ch3_1-early-britain.md  ch3_2-middle-ages.md  ch3_3-tudors-and-stuarts.md  ch4_1-uk-today.md  (+16 more)
app/: .gitignore  pyproject.toml  pyrightconfig.json
app/lituk/: db.py
app/lituk/cli/: __init__.py  __main__.py
app/lituk/ingest/: __init__.py  __main__.py  ingester.py  parser.py
app/lituk/review/: __init__.py  __main__.py  bandit.py  cli.py  presenter.py  scheduler.py  session.py
app/lituk/stats/: __init__.py  __main__.py
app/lituk/tag/: __init__.py  __main__.py  tagger.py
app/lituk/web/: __init__.py  __main__.py  queries.py  routes_review.py  routes_stats.py  server.py  sessions.py
app/lituk/web/static/: app.css  app.js  dashboard.html  index.html  missed.html  session.html
app/tests/: conftest.py  test_bandit.py  test_cli_porcelain.py  test_db.py  test_ingester.py  test_parser.py  test_presenter.py  test_review_cli.py  test_scheduler.py  test_session.py  test_stats.py  test_tagger.py  test_web_e2e.py  test_web_queries.py  test_web_routes_review.py  test_web_routes_stats.py  test_web_server.py  test_web_sessions.py
britizen/: summary-ch1-values-principles.txt  summary-ch2-the-uk.txt  summary-ch3-history.txt  summary-ch4-society.txt  summary-ch5-civics.txt
deb/: ch3_1-early-britain.md  history-timeline.md
docs/: cli.md
(+24 files in other folders)
