[project]
name = "lituk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lituk-ingest = "lituk.ingest:main"
lituk-review = "lituk.review:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
