[project]
name = "lituk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["anthropic", "flask>=3.0"]

[project.scripts]
lituk = "lituk.cli:main"
lituk-ingest = "lituk.ingest:main"
lituk-review = "lituk.review:main"
lituk-stats = "lituk.stats:main"
lituk-tag = "lituk.tag:main"
lituk-web = "lituk.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
